data/derived/comb/progs/unify/prog3064.ml.out
Characters 70-71:
  | [x::y] -> x + sumList y;;
                          ^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
